--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,11 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/Uroš Tomažič/Documents/PlatformIO/Projects/stm32-sine-generator2/.pio/build/nucleo_l433rc_p/firmware.elf",
+            "executable": "/home/uki44/Desktop/stm32-sine-generator2-1/.pio/build/nucleo_l433rc_p/firmware.elf",
             "projectEnvName": "nucleo_l433rc_p",
-            "toolchainBinDir": "C:/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "toolchainBinDir": "/home/uki44/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/.platformio/platforms/ststm32/misc/svd/STM32L4x3.svd",
+            "svdPath": "/home/uki44/.platformio/platforms/ststm32/misc/svd/STM32L4x3.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -26,21 +26,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/Uroš Tomažič/Documents/PlatformIO/Projects/stm32-sine-generator2/.pio/build/nucleo_l433rc_p/firmware.elf",
+            "executable": "/home/uki44/Desktop/stm32-sine-generator2-1/.pio/build/nucleo_l433rc_p/firmware.elf",
             "projectEnvName": "nucleo_l433rc_p",
-            "toolchainBinDir": "C:/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "toolchainBinDir": "/home/uki44/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/.platformio/platforms/ststm32/misc/svd/STM32L4x3.svd"
+            "svdPath": "/home/uki44/.platformio/platforms/ststm32/misc/svd/STM32L4x3.svd"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/Uroš Tomažič/Documents/PlatformIO/Projects/stm32-sine-generator2/.pio/build/nucleo_l433rc_p/firmware.elf",
+            "executable": "/home/uki44/Desktop/stm32-sine-generator2-1/.pio/build/nucleo_l433rc_p/firmware.elf",
             "projectEnvName": "nucleo_l433rc_p",
-            "toolchainBinDir": "C:/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "toolchainBinDir": "/home/uki44/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/.platformio/platforms/ststm32/misc/svd/STM32L4x3.svd",
+            "svdPath": "/home/uki44/.platformio/platforms/ststm32/misc/svd/STM32L4x3.svd",
             "loadMode": "manual"
         }
     ]
